tdf#97247 Keep focus on merged cell at top-left corner

... when typing either UP or LEFT key.

Change-Id: I7bc0e7eb0cba322bcc26c35d0474ea558d3bdd6e